# bg3-mod-manager

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  mods.rs  modsettings_file.rs  prelude.rs  settings.rs  state.rs
src-tauri/src/mods/: json.rs  xml.rs
src-tauri/test-xml/: test.xml
src/lib/: dto.ts  ipc.ts  store.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  FileDrop.svelte  ModDetail.svelte  ModsTable.svelte  Settings.svelte
src/routes/config/: +page.svelte
