[package]
name = "bg3-mod-manager"
version = "0.1.0"
description = "Baldurs Gate 3 Mod Manager"
authors = ["Dmytro Onypko vaporif@gmailc.com"]
license = "Apache2.0"
repository = "https://github.com/vaporif/bg3-mod-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize", "async-tokio"] }
zip = "0.6"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "1"
md5 = "0.7.0"
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
home = "0.5.9"
lazy_static = "1.4"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
